<resources>
    <string name="app_name">MyCouturier</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="measurementsBtn">Start Measurement</string>
    <string name="myRecordBook">Record Book</string>
    <string name="ordersBtn">Make Orders</string>
    <string name="maleBtn">Male</string>
    <string name="femaleBtn">Female</string>
    <string name="upperBody">Upper body</string>
    <string name="midBody">Mid Section</string>
    <string name="lowerBody">Lower Body</string>
    <string name="nextBtn">Next</string>
    <string name="centimeter_text">cm</string>
    <string name="inch_text">inch</string>
    <string name="mm_text">mm</string>
    <string name="error_empty_string">Please enter a valid size</string>
    <string name="description">Measurement Description</string>
    <string name="desc_helper_text">E.g Dr. Jenny Ajayi</string>
    <string name="fullbody">Full Body/Suits/Gowns</string>
    <string name="longSVshirt">Long Sleeve Shirts</string>
    <string name="shortSVShirt">Short Sleeve Shirts</string>
    <string name="hat">Hats</string>
    <string name="skirt">Skirts</string>
    <string name="trouser">trouser</string>

    <string name="facebook_app_id">307345803938096</string>
    <string name="fb_login_protocol_scheme">fb307345803938096</string>
    <string name="login">Log In</string>
    <string name="signUp">Sign Up</string>
    <string name="logout">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>