<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.raidify.mobi.mycouturier.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
        <action
            android:id="@+id/action_nav_home_to_nav_measurement"
            app:destination="@id/nav_new_measurement" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.raidify.mobi.mycouturier.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.raidify.mobi.mycouturier.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_new_measurement"
        android:name="com.raidify.mobi.mycouturier.ui.measurement.NewMeasurementFragment"
        android:label="measurement_type__fragment"
        tools:layout="@layout/new_measurement__fragment" >
        <action
            android:id="@+id/action_nav_new_measurement_to_maleUpperBodyFragment"
            app:destination="@id/maleUpperBodyFragment" />
        <action
            android:id="@+id/action_nav_new_measurement_to_femaleUpperBodyFragment"
            app:destination="@id/femaleUpperBodyFragment" />
    </fragment>
    <fragment
        android:id="@+id/maleUpperBodyFragment"
        android:name="com.raidify.mobi.mycouturier.ui.measurement.MaleUpperBodyFragment"
        android:label="MaleUpperBodyFragment" >
        <action
            android:id="@+id/action_maleUpperBodyFragment_to_maleLowerBodyFragment"
            app:destination="@id/maleLowerBodyFragment" />
    </fragment>
    <fragment
        android:id="@+id/femaleUpperBodyFragment"
        android:name="com.raidify.mobi.mycouturier.ui.measurement.FemaleUpperBodyFragment"
        android:label="FemaleUpperBodyFragment" >
        <action
            android:id="@+id/action_femaleUpperBodyFragment_to_femaleLowerBodyFragment"
            app:destination="@id/femaleLowerBodyFragment" />
    </fragment>
    <fragment
        android:id="@+id/femaleLowerBodyFragment"
        android:name="com.raidify.mobi.mycouturier.ui.measurement.FemaleLowerBodyFragment"
        android:label="FemaleLowerBodyFragment" >
        <action
            android:id="@+id/action_femaleLowerBodyFragment_to_femaleUpperBodyFragment"
            app:destination="@id/femaleUpperBodyFragment" />
    </fragment>
    <fragment
        android:id="@+id/maleLowerBodyFragment"
        android:name="com.raidify.mobi.mycouturier.ui.measurement.MaleLowerBodyFragment"
        android:label="MaleLowerBodyFragment" >
        <action
            android:id="@+id/action_maleLowerBodyFragment_to_maleUpperBodyFragment"
            app:destination="@id/maleUpperBodyFragment" />
    </fragment>
</navigation>